@@ -1,5 +1,6 @@
 Changes for 1.7.3
 
+ - [ZBX-1302] fixed references to missing items.nextcheck in the GUI (Alexei)
  - [ZBX-1230] IP adresss is made a default selection in host details form (Alexei)
  - [ZBX-1222] fixed default Debug Log level for agents (Alexei)
  - [DEV-434] added support of host availability for proxy hosts (Sasha)
